# PartsCoin

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  configure  configure.ac
.github/: ISSUE_TEMPLATE.md
build_msvc/: bitcoin_config.h  common.init.vcxproj
ci/test/: 06_script_a.sh  (+3 more)
contrib/: README.md  install_db4.sh
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-partscoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  partscoin-cli.1  partscoin-qt.1  partscoin-tx.1  partscoin-wallet.1  partscoind.1
share/: readme.md  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  banman.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  coins.h  compressor.h  core_read.cpp  flatfile.h  init.cpp  init.h  logging.cpp  logging.h  miner.cpp  miner.h  net.cpp  net.h  net_permissions.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  outputtype.cpp  pow.cpp  (+16 more)
test/: README.md  get_previous_releases.py
(+229 files in other folders)
