dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=partscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=partscoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=partscoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=partscoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=partscoin-wallet.1
endif
endif
